--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -334,7 +334,7 @@ footer a {
   background: #f1f3f5;
 }
 
-img {
+/* img {
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
-}
+} */
