--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -338,3 +338,47 @@ footer a {
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
 } */
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #404e4d;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+
+li {
+  float: left;
+  border-right: 1px solid #bbb;
+  z-index: 100;
+  position: -webkit-sticky;
+  position: sticky;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  z-index: 100;
+  position: -webkit-sticky;
+  position: sticky;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: rgb(11, 195, 241);
+}
+
+.active {
+  background-color: #04AA6D;
+}
+
+li:last-child {
+  border-right: none;
+}
